feat: add description field to properties in model and params templates

--- a/src/templates/modelTemplate.mustache
+++ b/src/templates/modelTemplate.mustache
@@ -11,6 +11,9 @@ import { {{name}} } from '{{{importPath}}}';
 
 export const {{modelName}} = z.object({
 {{#properties}}
+{{#description}}
+  /** {{description}} */
+{{/description}}
   {{name}}: {{#isRef}}{{refName}}{{/isRef}}{{^isRef}}{{{zodType}}}{{/isRef}},
 {{/properties}}
 });
